# visor_multimedia

./: .gitignore  pyproject.toml
src/visor/: main.py
src/visor/services/: __init__.py  navigation_system.py
src/visor/ui/: __init__.py  app.py  central_widget.py  config_widget.py  main_window.py  placeholder_viewer.py  sidebar_widget.py  viewer_container.py
src/visor_multimedia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
