[project]
name = "visor-multimedia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.0.0",
    "pyside6>=6.10.1",
    "watchdog>=6.0.0",
]
[project.scripts]
visor = "visor.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]